--- a/src/app/modules/karyawan/components/tambah-karyawan-baru-dialog/tambah-karyawan-baru-dialog.component.html
+++ b/src/app/modules/karyawan/components/tambah-karyawan-baru-dialog/tambah-karyawan-baru-dialog.component.html
@@ -27,6 +27,7 @@
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
+            placeholderText="KDGRPTRF"
             (onUserInput)="onUserInput($event,'KDGRPTRF')"></rounded-input>
     </div>
 
@@ -92,7 +93,7 @@
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
-            placeholderText="000-0000"
+            placeholderText=""
             (onUserInput)="onUserInput($event,'STATUSKKRY')"></rounded-input>
     </div>
     <wsh wide="24px"></wsh>
@@ -101,7 +102,7 @@
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
-            placeholderText="0000-0000-0000"
+            placeholderText=""
             (onUserInput)="onUserInput($event,'KDDEPT')"></rounded-input>
     </div>
 
@@ -115,7 +116,7 @@
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
-            placeholderText="000-0000"
+            placeholderText=""
             (onUserInput)="onUserInput($event,'KODEASS')"></rounded-input>
     </div>
     <wsh wide="24px"></wsh>
@@ -124,7 +125,7 @@
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
-            placeholderText="0000-0000-0000"
+            placeholderText=""
             (onUserInput)="onUserInput($event,'JABATAN')"></rounded-input>
     </div>
 
@@ -138,7 +139,7 @@
             style="width:130px;"></label-input>
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
-            placeholderText="000-0000"
+            placeholderText=""
             (onUserInput)="onUserInput($event,'UNITKERJA')"></rounded-input>
     </div>
     <wsh wide="24px"></wsh>
