--- a/src/app/modules/dokter-luar/components/info-dokter-luar-card/info-dokter-luar-card.component.html
+++ b/src/app/modules/dokter-luar/components/info-dokter-luar-card/info-dokter-luar-card.component.html
@@ -1,54 +1,36 @@
-<div class="d-flex justify-content-between align-items-center judulkonten">
-    <div class="label-title">
-        Data Dokter Luar
-    </div>
-    <red-button label="+ Tambah Dokter"
-        font="14px"
-        paddingtop="10px"
-        width="140px"
-        paddingbottom="10px"
-        paddingleft="0px"
-        paddingright="0px"
-        float="right"
-        (click)="tambahDokter()"></red-button>
-</div>
-
-
-<wsv wide="80px"></wsv>
 <div class="info-perusahaan-card-wrapper d-flex"
     style="padding-left:60px;padding-right:60px;">
     <div class="flex-grow-1">
         <div class="flex perusahaan-label"
             style="width:5%;float:left;text-align:right;">
-            NO
+            {{index+1}}.
         </div>
         <div style="width:5%;float:left;text-align:right;">&nbsp;</div>
 
         <div class="flex perusahaan-label"
             style="width:20%;float:left;">
-            NAMA DOKTER
+            {{dokter?.NAMADOKTER}}
         </div>
         <div class="flex perusahaan-label"
             style="width:15%;float:left;">
-            KODE DOKTER
+            {{dokter?.KODEDOKTER}}
         </div>
         <div class="flex perusahaan-label"
             style="width:35%;float:left;">
-            ALAMAT
+            {{dokter?.ALAMAT}}
         </div>
         <div class="flex perusahaan-label"
             style="width:10%;float:left;">
-            KODE BAGIAN
+            {{dokter?.KDSPESIAL}}
         </div>
         <div class="flex perusahaan-label"
             style="width:10%;float:left;">
-            TELPON
+            {{dokter?.TELP}}
         </div>
-
 
 
         <wsv wide="20px"></wsv>
-
+        <horizontal-line></horizontal-line>
         <wsv wide="12px"></wsv>
         <div class="d-flex">
 
@@ -56,20 +38,10 @@
 
     </div>
     <div class="d-flex">
-        <icon-edit></icon-edit>
+        <icon-edit (click)="editData()"></icon-edit>
         <wsh wide="16px"></wsh>
-        <icon-hapus></icon-hapus>
+        <icon-hapus (click)="deleteData()"></icon-hapus>
         <wsh wide="16px"></wsh>
-    </div>
-    <wsv wide="30px"></wsv>
-    <horizontal-line></horizontal-line>
-</div>
 
-<div *ngFor="let dokter of dokters; index as i"
-    style="overflow: auto;">
-    <info-dokter-luar-card [index]="i"
-        [dokter]="dokter"
-        (editEvent)="editDokter(dokter)"
-        (deleteEvent)="hapusDokter(dokter)">
-    </info-dokter-luar-card>
+    </div>
 </div>
