--- a/src/app/modules/supplier/components/tambah-supplier-baru-dialog/tambah-supplier-baru-dialog.component.html
+++ b/src/app/modules/supplier/components/tambah-supplier-baru-dialog/tambah-supplier-baru-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between align-items-center">
     <div id="header">
-        Edit Supplier
+        Tambah Supplier Baru
     </div>
     <img id="close-dialog-button"
         (click)="batal()"
@@ -18,8 +18,7 @@
 
         <rounded-input width="298px"
             placeholderText="NAMASUPP"
-            (onUserInput)="onUserInput($event,'NAMASUPP')"
-            [content]="supplier?.NAMASUPP"></rounded-input>
+            (onUserInput)="onUserInput($event,'NAMASUPP')"></rounded-input>
 
     </div>
     <wsh wide="16px"></wsh>
@@ -29,8 +28,7 @@
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
             placeholderText="KODESUPP"
-            (onUserInput)="onUserInput($event,'KODESUPP')"
-            [content]="supplier?.KODESUPP"></rounded-input>
+            (onUserInput)="onUserInput($event,'KODESUPP')"></rounded-input>
     </div>
 
 </div>
@@ -46,8 +44,7 @@
         <wsh wide="16px"></wsh>
         <rounded-input width="788px"
             placeholderText="Jl. Raya "
-            (onUserInput)="onUserInput($event,'ALAMAT1')"
-            [content]="supplier?.ALAMAT1"></rounded-input>
+            (onUserInput)="onUserInput($event,'ALAMAT1')"></rounded-input>
     </div>
 </div>
 
@@ -59,8 +56,7 @@
         <wsh wide="16px"></wsh>
         <rounded-input width="788px"
             placeholderText="Jl. Raya "
-            (onUserInput)="onUserInput($event,'ALAMAT2')"
-            [content]="supplier?.ALAMAT2"></rounded-input>
+            (onUserInput)="onUserInput($event,'ALAMAT2')"></rounded-input>
     </div>
 </div>
 
@@ -79,8 +75,7 @@
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
             placeholderText=""
-            (onUserInput)="onUserInput($event,'NOTELP')"
-            [content]="supplier?.NOTELP"></rounded-input>
+            (onUserInput)="onUserInput($event,'NOTELP')"></rounded-input>
 
     </div>
     <wsh wide="24px"></wsh>
@@ -90,8 +85,7 @@
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
             placeholderText=""
-            (onUserInput)="onUserInput($event,'NOFAX')"
-            [content]="supplier?.NOFAX"></rounded-input>
+            (onUserInput)="onUserInput($event,'NOFAX')"></rounded-input>
     </div>
 
 </div>
@@ -106,8 +100,7 @@
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
             placeholderText=""
-            (onUserInput)="onUserInput($event,'STSSUPP')"
-            [content]="supplier?.STSSUPP"></rounded-input>
+            (onUserInput)="onUserInput($event,'STSSUPP')"></rounded-input>
     </div>
     <wsh wide="24px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
@@ -116,8 +109,7 @@
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
             placeholderText=""
-            (onUserInput)="onUserInput($event,'APGRPID')"
-            [content]="supplier?.APGRPID"></rounded-input>
+            (onUserInput)="onUserInput($event,'APGRPID')"></rounded-input>
     </div>
 
 </div>
@@ -131,8 +123,7 @@
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
             placeholderText=""
-            (onUserInput)="onUserInput($event,'TYPESUPP')"
-            [content]="supplier?.TYPESUPP"></rounded-input>
+            (onUserInput)="onUserInput($event,'TYPESUPP')"></rounded-input>
     </div>
     <wsh wide="24px"></wsh>
     <div class="d-flex justify-content-end align-items-center">
@@ -141,8 +132,7 @@
         <wsh wide="16px"></wsh>
         <rounded-input width="298px"
             placeholderText=""
-            (onUserInput)="onUserInput($event,'ASAL')"
-            [content]="supplier?.ASAL"></rounded-input>
+            (onUserInput)="onUserInput($event,'ASAL')"></rounded-input>
     </div>
 
 </div>
