--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -102,6 +102,8 @@
 					<button mat-menu-item
 						(click)="goesToPage('vendor')">Vendor</button>
 					<button mat-menu-item
+						(click)="goesToPage('bagian')">Bagian</button>
+					<button mat-menu-item
 						(click)="goesToPage('rs-rujukan')">RS Rujukan</button>
 				</mat-menu>
 				<button mat-button
